--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <div class="container p-grid">
-  <div *ngFor="let product of products" class="p-col-4"><img width="150" [src]="getProductImage(product.image)" /></div>
+  <div *ngFor="let product of products" class="p-col-3">
+    <img width="150" [src]="getProductImage(product.image)" />
+
+    <div *ngIf="product.remains">{{ product.remains }}</div>
+    <div *ngIf="!product.remains">نا موجود</div>
+
+  </div>
 </div>
