--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,16 @@
-<div class="container p-grid">
-  <div *ngFor="let product of products" class="p-col-3">
-    <img width="150" [src]="getProductImage(product.image)" />
-    <div *ngIf="product.remained; else outOfStock">{{product.remained}}</div>
+<div class = "container p-grid">
+  <div *ngFor = "let product of products" class="product p-col-3 p-p-6">
+    <img [src] = "getProductImage(product.image)" />
+<!--    <div *ngIf="product.remained" class="remained">{{ product.remained }}</div>-->
+<!--    <div *ngIf="!product.remained" class="remained">ناموجود</div>-->
 
-    <ng-template #outOfStock>
-      <div>ناموجود</div>
-    </ng-template>
+<!--    <div *ngIf="product.remained; else outOfStock" class="remained">{{ product.remained }}</div>-->
 
-<!--    <div [hidden]="!product.remained">{{product.remained}}</div>-->
-<!--    <div [hidden]="product.remained">ناموجود</div>-->
+<!--    <ng-template #outOfStock>-->
+<!--      <div class="remained">ناموجود</div>-->
+<!--    </ng-template>-->
+
+    <div [hidden]="!product.remained" class="remained">{{ product.remained }}</div>
+    <div [hidden]="product.remained" class="remained">ناموجود</div>
   </div>
 </div>
