--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,12 @@
-<div>
-  <img src="" alt="Logo" />
+<div class="container">
 
-  <app-user-widget></app-user-widget>
+  <div>
+    <app-menu></app-menu>
+  </div>
 
-  <app-menu></app-menu>
+  <div class="panel">
+    <app-user-widget></app-user-widget>
+
+    <img src="assets/images/angular.svg" alt="Logo" width="50" height="50" />
+  </div>
 </div>
