--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,1 +1,19 @@
-<p>menu works!</p>
+<div class="container">
+  <div class="dropdown">
+    <div>منو 1</div>
+    <div class="dropdown-content">
+      <a href="#">لینک 1</a>
+      <a href="#">لینک 2</a>
+      <a href="#">لینک 3</a>
+    </div>
+  </div>
+
+  <div class="dropdown">
+    <div>منو 2</div>
+    <div class="dropdown-content">
+      <a href="#">لینک 1</a>
+      <a href="#">لینک 2</a>
+      <a href="#">لینک 3</a>
+    </div>
+  </div>
+</div>
