--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
 @import "../node_modules/primeflex/primeflex.css";
 @import "../node_modules/primeng/resources/primeng.min.css";
 @import "../node_modules/primeng/resources/themes/md-light-indigo/theme.css";
+
+html, body{
+  direction: rtl;
+}
