--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,19 +1,8 @@
 <div class="container">
-  <div class="dropdown">
-    <div>منو 1</div>
-    <div class="dropdown-content">
-      <a href="#">لینک 1</a>
-      <a href="#">لینک 2</a>
-      <a href="#">لینک 3</a>
+    <div *ngFor="let item of items" class="dropdown">
+      <div>{{item.title}}</div>
+      <div class="dropdown-content">
+        <a *ngFor="let subItem of item.children" [href]="subItem.href">{{subItem.title}}</a>
+      </div>
     </div>
-  </div>
-
-  <div class="dropdown">
-    <div>منو 2</div>
-    <div class="dropdown-content">
-      <a href="#">لینک 1</a>
-      <a href="#">لینک 2</a>
-      <a href="#">لینک 3</a>
-    </div>
-  </div>
 </div>
