--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div>
-    <app-menu></app-menu>
+    <app-menu [items]="menuItems"></app-menu>
   </div>
 
   <div class="panel">
