--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,8 @@
 .container{
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  background-color: #4FC3F7;
 
   .panel{
     display: flex;
