--- a/src/app/user-widget/user-widget.component.html
+++ b/src/app/user-widget/user-widget.component.html
@@ -1,6 +1,6 @@
 
 <ng-container *ngIf="user">
-  <a href="#"><img [src]="user.avatar" [alt]="getFullName()" [title]="getFullName()"/></a>
+  <a href="#"><img class="avatar" [src]="user.avatar" [alt]="getFullName()" [title]="getFullName()"/></a>
   <a href="#">خروج</a>
 </ng-container>
 
