--- a/src/app/pdp/pdp.component.html
+++ b/src/app/pdp/pdp.component.html
@@ -1,2 +1,9 @@
-<div *ngIf = "product">PDP: {{ product._id }}</div>
-<div *ngIf = "!product">Loading...</div>
+<div class="container">
+  <div *ngIf = "!product">Loading...</div>
+
+  <div class="product" *ngIf = "product">
+      <img [src] = "getProductImage(product.image)" />
+      <div *ngIf="product.remained" class="remained">{{ product.remained }}</div>
+      <div *ngIf="!product.remained" class="remained">ناموجود</div>
+  </div>
+</div>
