--- a/src/app/pdp/pdp.component.html
+++ b/src/app/pdp/pdp.component.html
@@ -2,7 +2,18 @@
   <div *ngIf = "!product">Loading...</div>
 
   <div class="product" *ngIf = "product">
-      <img [src] = "getProductImage(product.images)" />
+<!--      <img [src] = "getProductImage(product.images)" />-->
+
+      <p-galleria [value]="getProductImages()">
+        <ng-template pTemplate="item" let-item>
+          <img [src]="item" [alt]="product._id" />
+        </ng-template>
+
+        <ng-template pTemplate="thumbnail" let-item>
+          <img [src]="item" [alt]="product._id" />
+        </ng-template>
+      </p-galleria>
+
       <div *ngIf="product.remained" class="remained">{{ product.remained }}</div>
       <div *ngIf="!product.remained" class="remained">ناموجود</div>
   </div>
