--- a/src/app/pdp/pdp.component.html
+++ b/src/app/pdp/pdp.component.html
@@ -4,15 +4,17 @@
   <div class="product" *ngIf = "product">
 <!--      <img [src] = "getProductImage(product.images)" />-->
 
-      <p-galleria [value]="getProductImages()">
-        <ng-template pTemplate="item" let-item>
-          <img [src]="item" [alt]="product._id" />
-        </ng-template>
+      <div class="gallery">
+        <p-galleria [value]="getProductImages()">
+          <ng-template pTemplate="item" let-item>
+            <img [src]="item" [alt]="product._id" width="100%" />
+          </ng-template>
 
-        <ng-template pTemplate="thumbnail" let-item>
-          <img [src]="item" [alt]="product._id" />
-        </ng-template>
-      </p-galleria>
+          <ng-template pTemplate="thumbnail" let-item>
+            <img [src]="item" [alt]="product._id" width="100%" />
+          </ng-template>
+        </p-galleria>
+      </div>
 
       <div *ngIf="product.remained" class="remained">{{ product.remained }}</div>
       <div *ngIf="!product.remained" class="remained">ناموجود</div>
