--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,24 @@
+@import "../node_modules/primeicons/primeicons.css";
 @import "../node_modules/primeflex/primeflex.css";
 @import "../node_modules/primeng/resources/primeng.min.css";
 @import "../node_modules/primeng/resources/themes/md-light-indigo/theme.css";
 
-html, body{
+html, body {
   direction: rtl;
   margin: 0;
   padding: 0;
 }
 
-.p-grid{
+.p-grid {
   margin: 0;
+}
+
+p-galleria {
+  .p-galleria-thumbnail-container {
+    flex-direction: row-reverse;
+
+    .p-galleria-thumbnail-items{
+      flex-direction: row-reverse;
+    }
+  }
 }
