--- a/src/app/pdp/pdp.component.html
+++ b/src/app/pdp/pdp.component.html
@@ -1,19 +1,10 @@
 <div class="container">
-  <div *ngIf = "!product">Loading...</div>
+  <app-loading [isLoading]="!product"></app-loading>
 
   <div class="product" *ngIf = "product">
-<!--      <img [src] = "getProductImage(product.images)" />-->
 
       <div class="gallery">
-        <p-galleria [value]="getProductImages()">
-          <ng-template pTemplate="item" let-item>
-            <img [src]="item" [alt]="product._id" width="100%" />
-          </ng-template>
-
-          <ng-template pTemplate="thumbnail" let-item>
-            <img [src]="item" [alt]="product._id" width="100%" />
-          </ng-template>
-        </p-galleria>
+        <app-gallery [images]="getProductImages()"></app-gallery>
       </div>
 
       <div *ngIf="product.remained" class="remained">{{ product.remained }}</div>
