--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -4,8 +4,14 @@
     max-width: 100%;
   }
 
+	.title{
+		font-weight: bold;
+		text-align: center;
+	}
+
   .remained{
     text-align: center;
+		color: #FF0000;
   }
 }
 
