--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,21 +1,33 @@
 <form>
 	<div class = "p-field">
 		<label for="register_phone">تلفن همراه</label>
-		<input id="register_phone" type="tel" pInputText >
+		<input id="register_phone" [(ngModel)]="user.phone" type="tel" name="phone" pInputText required >
+	</div>
+
+	<div class = "p-field">
+		<label for="register_firstname">نام</label>
+		<input id="register_firstname" [(ngModel)]="user.firstName" name="firstName" type="text" pInputText >
+	</div>
+
+	<div class = "p-field">
+		<label for="register_lastname">نام خانوادگی</label>
+		<input id="register_lastname" [(ngModel)]="user.lastName" name="lastName" type="text" pInputText >
 	</div>
 
 	<div class = "p-field">
 		<label for="register_password">رمزعبور</label>
-		<input id="register_password" type="password" pInputText >
+		<input id="register_password" [(ngModel)]="user.password" name="password" type="password" pInputText >
 	</div>
 
 	<div class = "p-field">
 		<label for="register_password_confirm">تکرار رمز عبور</label>
-		<input id="register_password_confirm" type="password" pInputText >
+		<input id="register_password_confirm" type="password" [(ngModel)]="confirm" name="confirm" pInputText >
+<!--		<input id="register_password_confirm" type="password"  pInputText #confirm>-->
 	</div>
 
 	<div class = "p-field">
-		<button label="ثبت نام" pButton></button>
+<!--		<button label="ثبت نام" type="button" (click)="register(confirm.value)" pButton></button>-->
+		<button label="ثبت نام" type="button" (click)="register()" pButton></button>
 	</div>
 
 </form>
