--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,31 +2,33 @@
 	<div class = "p-field">
 		<label for="register_phone">تلفن همراه</label>
 		<input id="register_phone" type="tel" formControlName="phone" pInputText >
-		<span *ngIf="formGroup.get('phone').invalid && formGroup.get('phone').touched">مقدار وارد شده صحیح نمی باشد</span>
+		<span *ngIf="shouldShowPhoneRequiredError()">وارد کردن تلفن‌ همراه اجباری است</span>
+		<span *ngIf="shouldShowPhonePatternError()">تلفن همراه وارد شده صحیح نمی باشد. فرمت صحیح: 09123456789</span>
 	</div>
 
 	<div class = "p-field">
 		<label for="register_firstname">نام</label>
 		<input id="register_firstname" formControlName="firstName" type="text" pInputText>
-		<span *ngIf="formGroup.get('firstName').invalid && formGroup.get('firstName').touched">مقدار وارد شده صحیح نمی باشد</span>
+		<span *ngIf="shouldShowFirstNameRequiredError()">وارد کردن نام اجباری است</span>
 	</div>
 
 	<div class = "p-field">
 		<label for="register_lastname">نام خانوادگی</label>
 		<input id="register_lastname" formControlName="lastName" type="text" pInputText>
-		<span *ngIf="formGroup.get('lastName').invalid && formGroup.get('lastName').touched">مقدار وارد شده صحیح نمی باشد</span>
+		<span *ngIf="shouldShowLastNameRequiredError()">وارد کردن نام خانوادگی اجباری است</span>
 	</div>
 
 	<div class = "p-field">
 		<label for="register_password">رمزعبور</label>
 		<input id="register_password" formControlName="password" type="password" pInputText>
-		<span *ngIf="formGroup.get('password').invalid && formGroup.get('password').touched">مقدار وارد شده صحیح نمی باشد</span>
+		<span *ngIf="shouldShowPasswordRequiredError()">وارد کردن رمزعبور اجباری است</span>
 	</div>
 
 	<div class = "p-field">
 		<label for="register_password_confirm">تکرار رمز عبور</label>
 		<input id="register_password_confirm" type="password"  formControlName="confirm" pInputText>
-		<span *ngIf="formGroup.get('confirm').invalid && formGroup.get('confirm').touched">مقدار وارد شده صحیح نمی باشد</span>
+		<span *ngIf="shouldShowConfirmRequiredError()">وارد کردن تکرار رمزعبور اجباری است</span>
+		<span *ngIf="shouldShowConfirmNotMatchError()">رمزعبور با تکرار آن همخوانی ندارد</span>
 	</div>
 
 	<div class = "p-field">
