--- a/src/app/pdp/pdp.component.html
+++ b/src/app/pdp/pdp.component.html
@@ -35,6 +35,8 @@
 					                incrementButtonIcon="pi pi-plus"
 					                decrementButtonIcon="pi pi-minus"  >
 					</p-inputNumber>
+
+					<p-button label="ادامه فرآیند خرید" (click)="goToCart()"></p-button>
 				</div>
 			</div>
 		</div>
