--- a/src/app/pdp/pdp.component.html
+++ b/src/app/pdp/pdp.component.html
@@ -41,4 +41,23 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="comments">
+		<form>
+
+			<div class="p-float-label">
+			    <input id="comment-title" type="text" pInputText>
+			    <label for="comment-title">عنوان</label>
+			</div>
+
+
+			<div>
+				<textarea name="content" pInputTextarea></textarea>
+			</div>
+
+			<div>
+				<button pButton label="ثبت"></button>
+			</div>
+		</form>
+	</div>
 </div>
