--- a/src/app/pdp/pdp.component.html
+++ b/src/app/pdp/pdp.component.html
@@ -56,6 +56,10 @@
 			</div>
 
 			<div>
+				<app-rate [options]="options"></app-rate>
+			</div>
+
+			<div>
 				<button pButton label="ثبت"></button>
 			</div>
 		</form>
