--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <a>قوانین و مقررات</a>
-  <a>درباره ما</a>
-  <a>تماس با ما</a>
+  <a href="terms">قوانین و مقررات</a>
+  <a href="about">درباره ما</a>
+  <a href="http://localhost:4200/contact">تماس با ما</a>
+  <a href="https://google.com">شرکای ما</a>
 </div>
