--- a/src/app/pdp/pdp.component.html
+++ b/src/app/pdp/pdp.component.html
@@ -68,6 +68,20 @@
 
 	<app-tab-view [tabs]="['Tehran', 'Karaj', 'Bandar Abbas']">
 
+		<div id="tehran">
+			<h3>Tehran</h3>
+			<div>Hello Tehran</div>
+		</div>
+
+		<div id="karaj">
+			<h3>Karaj</h3>
+			<div>Hello Karaj</div>
+		</div>
+
+		<div id="bandar-abbas">
+			<h3>Bandar Abbas</h3>
+			<div>Hello Bandar Abbas</div>
+		</div>
 
 	</app-tab-view>
 </div>
