--- a/src/app/tab-view/tab-view.component.html
+++ b/src/app/tab-view/tab-view.component.html
@@ -3,18 +3,22 @@
 	<button *ngFor="let tab of tabs" class="tablinks">{{tab}}</button>
 </div>
 
+<div class="tabcontent">
+	<ng-content></ng-content>
+</div>
+
 <!-- Tab content -->
-<div id="London" class="tabcontent">
-	<h3>Tehran</h3>
-	<p>Salam.</p>
-</div>
+<!--<div id="London" class="tabcontent">-->
+<!--	<h3>Tehran</h3>-->
+<!--	<p>Salam.</p>-->
+<!--</div>-->
 
-<div id="Paris" class="tabcontent">
-	<h3>Paris</h3>
-	<p>Paris is the capital of France.</p>
-</div>
+<!--<div id="Paris" class="tabcontent">-->
+<!--	<h3>Paris</h3>-->
+<!--	<p>Paris is the capital of France.</p>-->
+<!--</div>-->
 
-<div id="Tokyo" class="tabcontent">
-	<h3>Tokyo</h3>
-	<p>Tokyo is the capital of Japan.</p>
-</div>
+<!--<div id="Tokyo" class="tabcontent">-->
+<!--	<h3>Tokyo</h3>-->
+<!--	<p>Tokyo is the capital of Japan.</p>-->
+<!--</div>-->
